Add default link style

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -7,7 +7,7 @@
   <h2 class="f4">Mailing list</h2>
 
   <p>
-    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org" class="link blue hover-u">git@vger.kernel.org</a>. <strong>Bug reports for git should be sent to this mailing list.</strong>
+    Questions or comments for the Git community can be sent to the mailing list by using the email address <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>. <strong>Bug reports for git should be sent to this mailing list.</strong>
   </p>
 
   <p>
@@ -15,16 +15,16 @@
   </p>
 
   <p>
-  By subscribing (click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git" class="link blue hover-u">here</a>), you can make sure you're not missing follow-up discussions and you can also learn about other development in the community.  The list <a href="https://public-inbox.org/git" class="link blue hover-u">archive</a> can be found on public-inbox.
+  By subscribing (click <a href="mailto:majordomo@vger.kernel.org?body=subscribe git">here</a>), you can make sure you're not missing follow-up discussions and you can also learn about other development in the community.  The list <a href="https://public-inbox.org/git">archive</a> can be found on public-inbox.
   </p>
 
   <p>
-  Windows-specific questions can also be sent to the <a href="https://groups.google.com/forum/?fromgroups#!forum/git-for-windows" class="link blue hover-u">Git for Windows mailing list</a> (if in doubt whether your question is Windows-specific, just use the general Git mailing list). Please submit Windows-specific bugs to <a href="https://github.com/git-for-windows/git/issues" class="link blue hover-u">Git for Windows' bug tracker</a>.
+  Windows-specific questions can also be sent to the <a href="https://groups.google.com/forum/?fromgroups#!forum/git-for-windows">Git for Windows mailing list</a> (if in doubt whether your question is Windows-specific, just use the general Git mailing list). Please submit Windows-specific bugs to <a href="https://github.com/git-for-windows/git/issues">Git for Windows' bug tracker</a>.
   </p>
 
   <p>
-  There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users" class="link blue hover-u">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
-  If you're a downstream packager of Git, consider joining the <a href="https://groups.google.com/forum/?fromgroups#!forum/git-packagers" class="link blue hover-u">Git packagers mailing list</a> for low-volume announcements from the developers, as well as other discussion related to packaging &amp; porting Git.
+  There is also <a href="https://groups.google.com/forum/?fromgroups#!forum/git-users">Git user mailing list</a> on Google Groups which is a nice place for beginners to ask about anything.
+  If you're a downstream packager of Git, consider joining the <a href="https://groups.google.com/forum/?fromgroups#!forum/git-packagers">Git packagers mailing list</a> for low-volume announcements from the developers, as well as other discussion related to packaging &amp; porting Git.
   </p>
 
   <h2 class="f4">Bug reporting</h2>
@@ -34,21 +34,21 @@
     details). Note that you do not need to subscribe to the list to send
     to it. You can help us out by attempting to reproduce the bug in the latest
     released version of git, or if you're willing to build git from source, the
-    <a href="https://github.com/git/git/tree/next" class="link blue hover-u"><code>next</code> branch</a>.
+    <a href="https://github.com/git/git/tree/next"><code>next</code> branch</a>.
     Sometimes an attempted fix may be pending in this branch, in which case
     your feedback as to whether the fix worked for you will be appreciated.
   </p>
 
   <p>
     Bugs related to this website can be reported at its
-    <a href="https://github.com/git/git-scm.com/issues" class="link blue hover-u">issue tracker</a>.
+    <a href="https://github.com/git/git-scm.com/issues">issue tracker</a>.
     Bugs related to the content of the "Pro Git" book can be reported at its
-    <a href="https://github.com/progit/progit2" class="link blue hover-u">issue tracker</a>.
+    <a href="https://github.com/progit/progit2">issue tracker</a>.
   </p>
 
   <p>
     If you are new to submitting bugs, you might find <a
-                                                href="http://www.chiark.greenend.org.uk/~sgtatham/bugs.html" class="link blue hover-u">this
+                                                href="http://www.chiark.greenend.org.uk/~sgtatham/bugs.html">this
       guide</a> helpful for producing useful bug reports.
   </p>
 
@@ -56,7 +56,7 @@
 
   <p>
     Issues which are security relevant should be disclosed privately to
-    the <a href="mailto:git-security@googlegroups.com" class="blue link hover-u">Git Security</a> mailing list.
+    the <a href="mailto:git-security@googlegroups.com">Git Security</a> mailing list.
   </p>
 
   <h2 class="f4">IRC channel</h2>
@@ -73,6 +73,6 @@
   <h2 class="f4">Contributing to Git</h2>
 
   <p>
-  The <a href="https://github.com/git/git/tree/master/Documentation" class="blue link hover-u">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines" class="blue link hover-u">coding guidelines</a>, you can learn <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches" class="blue link hover-u">how to submit patches</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt" class="blue link hover-u">howto for Git maintainers</a>.
+  The <a href="https://github.com/git/git/tree/master/Documentation">Documentation directory</a> in the Git source code has several files of interest to developers who are looking to help contribute. After reading the <a href="https://github.com/git/git/blob/master/Documentation/CodingGuidelines">coding guidelines</a>, you can learn <a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">how to submit patches</a>. For those looking to get more deeply involved, there is a <a href="https://github.com/git/git/blob/master/Documentation/howto/maintain-git.txt">howto for Git maintainers</a>.
   </p>
 </div>
