Get assets working in the rails application

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,3 +6,5 @@
     This site is <a href="https://github.com/git/git-scm.com/blob/master/README.md#license" class="link blue hover-u">open source</a> and <a href="https://github.com/git/git-scm.com" class="link blue hover-u">hosted on GitHub.</a><br>
   </div>
 </footer>
+
+<%= javascript_pack_tag 'application' %>
