--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= @page_title.present? ? @page_title : "Git" %></title>
     <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-    <%= stylesheet_link_tag "index.css" %>
+    <%= stylesheet_pack_tag "index" %>
   </head>
 
   <body class="sans-serif bg-tan dark-gray mw9 center" id="<%= @section %>">
