Partial about section rework

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -33,6 +33,8 @@
 .hover-u:hover { text-decoration: underline; }
 .hover-u:active { text-decoration: underline; }
 
+.no-underline:hover { text-decoration: none; }
+
 /*
  * Fonts
  */
