--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,41 +1,40 @@
-<div id="main">
+<div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
+  <div class="w-100 w-75-l ph3 pl0-l pr5-l lh-copy">
+    <%# render partial: "branching_and_merging" %>
+    <%= render partial: "small_and_fast" %>
+    <%# render partial: "distributed" %>
+    <%# render partial: "data_assurance" %>
+    <%# render partial: "staging_area" %>
+    <%# render partial: "free_and_open_source" %>
+    <%# render partial: "trademark" %>
+  </div>
 
-  <h1>About</h1>
-
-  <ol id="about-nav">
-    <li>
-      <a href="#branching-and-merging" class="three-line current" id="nav-branching-and-merging" data-section-id="branching-and-merging">Branching and Merging</a>
-    </li>
-    <li>
-      <a href="#small-and-fast" class="two-line" id="nav-small-and-fast" data-section-id="small-and-fast">Small and Fast</a>
-    </li>
-    <li>
-      <a href="#distributed" class="one-line" id="nav-distributed" data-section-id="distributed">Distributed</a>
-    </li>
-    <li>
-      <a href="#info-assurance" class="two-line" id="nav-info-assurance" data-section-id="info-assurance">Data Assurance</a>
-    </li>
-    <li>
-      <a href="#staging-area" class="two-line" id="nav-staging-area" data-section-id="staging-area">Staging Area</a>
-    </li>
-    <li>
-      <a href="#free-and-open-source" class="three-line" id="nav-free-and-open-source" data-section-id="free-and-open-source">Free and Open Source</a>
-    </li>
-    <li>
-      <a href="#trademark" class="one-line" id="nav-trademark" data-section-id="trademark">Trademark</a>
-    </li>
-  </ol>
-
-  <%= render partial: "branching_and_merging" %>
-  <%= render partial: "small_and_fast" %>
-  <%= render partial: "distributed" %>
-  <%= render partial: "data_assurance" %>
-  <%= render partial: "staging_area" %>
-  <%= render partial: "free_and_open_source" %>
-  <%= render partial: "trademark" %>
+  <div class="w-25-l dn db-l">
+    <div class="bg-dark-tan pv3 ph4-l br2">
+      <ol class="list pl0">
+        <li class="pb2">
+          <a href="#branching-and-merging">Branching and merging</a>
+        </li>
+        <li class="pv2">
+          <a href="#small-and-fast">Small and fast</a>
+        </li>
+        <li class="pv2">
+          <a href="#distributed">Distributed</a>
+        </li>
+        <li class="pv2">
+          <a href="#info-assurance">Data assurance</a>
+        </li>
+        <li class="pv2">
+          <a href="#staging-area">Staging area</a>
+        </li>
+        <li class="pv2">
+          <a href="#free-and-open-source">Free and Open Source</a>
+        </li>
+        <li class="pt2">
+          <a href="#trademark">Trademark</a>
+        </li>
+      </ol>
+    </div>
+  </div>
 
 </div>
-
-<% content_for :sidebar do %>
-  <%= render 'shared/book' %>
-<% end %>
