--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,22 +18,22 @@
 
       <ul class="site-nav-links list w-100 w-auto-l pl0 dn db-l tl tr-l absolute relative-l left-0 top-2 top-0-l ph3 ph4-m ph0-l pv3 pv0-l bb bb-0-l b--moon-gray js-site-nav">
         <li class="db dib-l">
-          <a href="/about" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "about" %>">About</a>
+          <a href="/about" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "about" %>">About</a>
         </li>
         <li class="db dib-l">
-          <a href="/manual" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "manual" %>">Manual</a>
+          <a href="/manual" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "manual" %>">Manual</a>
         </li>
         <li class="db dib-l">
-          <a href="/book" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "book" %>">Book</a>
+          <a href="/book" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "book" %>">Book</a>
         </li>
         <li class="db dib-l">
-          <a href="/downloads" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "download" %>">Download</a>
+          <a href="/downloads" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "download" %>">Download</a>
         </li>
         <li class="db dib-l">
-          <a href="/resources" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "resources" %>">Resources</a>
+          <a href="/resources" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "resources" %>">Resources</a>
         </li>
         <li class="db dib-l">
-          <a href="/community" class="link near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "community" %>">Community</a>
+          <a href="/community" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "community" %>">Community</a>
         </li>
       </ul>
     </nav>
