Small and fast page formatting

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -1,9 +1,10 @@
 /*
  * Text colors
  */
-.near-black { color: #2F2C29; }
+.near-black { color: #2f2c29; }
 .dark-gray { color: #4e443c; }
 .mid-gray { color: #857e78; }
+.near-white { color: #fcfcfa; }
 .orange { color: #e05e0b; }
 .blue { color: #0f758c; }
 
@@ -14,6 +15,7 @@
 .bg-dark-tan { background-color: #edede9; }
 .bg-orange { background-color: #ff6300; }
 .bg-blue { background-color: #357edd; }
+.bg-near-white { background-color: #fcfcfa; }
 
 /*
  * Hover / focus
