--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -2,8 +2,8 @@
   <div class="w-100 w-75-l ph3 pl0-l pr5-l lh-copy">
     <%# render partial: "branching_and_merging" %>
     <%# render partial: "small_and_fast" %>
-    <%= render partial: "distributed" %>
-    <%# render partial: "data_assurance" %>
+    <%# render partial: "distributed" %>
+    <%= render partial: "data_assurance" %>
     <%# render partial: "staging_area" %>
     <%# render partial: "free_and_open_source" %>
     <%# render partial: "trademark" %>
