Free and open source formatting

--- a/app/views/about/_data_assurance.html.erb
+++ b/app/views/about/_data_assurance.html.erb
@@ -16,5 +16,5 @@
 
 <div class="flex flex-row justify-between">
   <a href="#distributed" class="b">← Distributed</a>
-  <a href="#staging-area" class="b">Staging Area →</a>
+  <a href="#staging-area" class="b">Staging area →</a>
 </div>
