--- a/app/views/about/_distributed.html.erb
+++ b/app/views/about/_distributed.html.erb
@@ -47,6 +47,6 @@
 </p>
 
 <div class="flex flex-row justify-between">
-  <a href="#small-and-fast" class="b">← Small and Fast</a>
+  <a href="#small-and-fast" class="b">← Small and fast</a>
   <a href="#info-assurance" class="b">Data Assurance →</a>
 </div>
