--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -197,6 +197,6 @@
 </p>
 
 <div class="flex flex-row justify-between">
-  <a href="#branching-and-merging" class="b">← Branching and Merging</a>
+  <a href="#branching-and-merging" class="b">← Branching and merging</a>
   <a href="#distributed" class="b">Distributed →</a>
 </div>
