--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,9 +3,9 @@
     <%# render partial: "branching_and_merging" %>
     <%# render partial: "small_and_fast" %>
     <%# render partial: "distributed" %>
-    <%= render partial: "data_assurance" %>
+    <%# render partial: "data_assurance" %>
     <%# render partial: "staging_area" %>
-    <%# render partial: "free_and_open_source" %>
+    <%= render partial: "free_and_open_source" %>
     <%# render partial: "trademark" %>
   </div>
 
