Trademark page formatting

--- a/app/views/about/_branching_and_merging.html.erb
+++ b/app/views/about/_branching_and_merging.html.erb
@@ -39,4 +39,6 @@
   There are ways to accomplish some of this with other systems, but the work involved is much more difficult and error-prone. Git makes this process incredibly easy and it changes the way most developers work when they learn it.
 </p>
 
-<a href="#small-and-fast" class="b">Small and fast →</a>
+<div class="mt4">
+  <a href="#small-and-fast" class="b">Small and fast →</a>
+</div>
