--- a/app/views/about/_distributed.html.erb
+++ b/app/views/about/_distributed.html.erb
@@ -46,7 +46,7 @@
   <img src="/images/about/workflow-c@2x.png" width="562" height="303" alt="Workflow C">
 </p>
 
-<div class="flex flex-row justify-between">
+<div class="flex flex-row justify-between mt4">
   <a href="#small-and-fast" class="b">← Small and fast</a>
   <a href="#info-assurance" class="b">Data Assurance →</a>
 </div>
