--- a/app/views/about/_staging_area.html.erb
+++ b/app/views/about/_staging_area.html.erb
@@ -24,7 +24,7 @@
   <img src="/images/about/index2@2x.png" width="338" height="185" alt="Index 2">
 </p>
 
-<div class="flex flex-row justify-between">
+<div class="flex flex-row justify-between mt4">
   <a href="#info-assurance" class="b">← Data assurance</a>
-  <a href="#free-and-open-source" class="b">Free and Open Source →</a>
+  <a href="#free-and-open-source" class="b">Free and open source →</a>
 </div>
