--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -5,8 +5,8 @@
     <%# render partial: "distributed" %>
     <%# render partial: "data_assurance" %>
     <%# render partial: "staging_area" %>
-    <%= render partial: "free_and_open_source" %>
-    <%# render partial: "trademark" %>
+    <%# render partial: "free_and_open_source" %>
+    <%= render partial: "trademark" %>
   </div>
 
   <div class="w-25-l dn db-l">
@@ -28,7 +28,7 @@
           <a href="#staging-area">Staging area</a>
         </li>
         <li class="pv2">
-          <a href="#free-and-open-source">Free and Open Source</a>
+          <a href="#free-and-open-source">Free and open source</a>
         </li>
         <li class="pt2">
           <a href="#trademark">Trademark</a>
