--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -20,7 +20,7 @@
             <%= link_to "Staging Area", "/about/staging-area", sidebar_link_options("staging-area") %>
           </li>
           <li>
-            <%= link_to "Free and Open Source", "/about/free-and-open-source", sidebar_link_options("free-and-open-source") %>
+            <%= link_to "Free and open source", "/about/free-and-open-source", sidebar_link_options("free-and-open-source") %>
           </li>
           <li>
             <%= link_to "Trademark", "/about/trademark", sidebar_link_options("trademark") %>
