--- a/app/views/about/_data_assurance.html.erb
+++ b/app/views/about/_data_assurance.html.erb
@@ -14,7 +14,7 @@
   Most centralized version control systems provide no such integrity by default.
 </p>
 
-<div class="flex flex-row justify-between">
+<div class="flex flex-row justify-between mt4">
   <a href="#distributed" class="b">← Distributed</a>
   <a href="#staging-area" class="b">Staging area →</a>
 </div>
