--- a/app/views/about/_small_and_fast.html.erb
+++ b/app/views/about/_small_and_fast.html.erb
@@ -196,7 +196,7 @@
   It's also interesting to note that the size of the data on the client side is very similar even though Git also has every version of every file for the entire history of the project. This illustrates how efficient it is at compressing and storing data on the client side.
 </p>
 
-<div class="flex flex-row justify-between">
+<div class="flex flex-row justify-between mt4">
   <a href="#branching-and-merging" class="b">← Branching and merging</a>
   <a href="#distributed" class="b">Distributed →</a>
 </div>
