Add new about pages

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,39 +1,20 @@
+<%- @section = "about" %>
+<%- @page_title = "About · Branching and merging · Git" %>
+
 <div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
   <div class="w-100 w-75-l ph3 pl0-l pr5-l lh-copy">
-    <%# render partial: "branching_and_merging" %>
+    <%= render partial: "branching_and_merging" %>
     <%# render partial: "small_and_fast" %>
     <%# render partial: "distributed" %>
     <%# render partial: "data_assurance" %>
     <%# render partial: "staging_area" %>
     <%# render partial: "free_and_open_source" %>
-    <%= render partial: "trademark" %>
+    <%# render partial: "trademark" %>
   </div>
 
   <div class="w-25-l dn db-l">
     <div class="bg-dark-tan pv3 ph4-l br2">
-      <ol class="list pl0">
-        <li class="pb2">
-          <a href="#branching-and-merging">Branching and merging</a>
-        </li>
-        <li class="pv2">
-          <a href="#small-and-fast">Small and fast</a>
-        </li>
-        <li class="pv2">
-          <a href="#distributed">Distributed</a>
-        </li>
-        <li class="pv2">
-          <a href="#info-assurance">Data assurance</a>
-        </li>
-        <li class="pv2">
-          <a href="#staging-area">Staging area</a>
-        </li>
-        <li class="pv2">
-          <a href="#free-and-open-source">Free and open source</a>
-        </li>
-        <li class="pt2">
-          <a href="#trademark">Trademark</a>
-        </li>
-      </ol>
+      <%= render partial: "about_nav" %>
     </div>
   </div>
 
