Remove old partials

--- a/app/views/about/_about_nav.html.erb
+++ b/app/views/about/_about_nav.html.erb
@@ -1,6 +1,6 @@
 <ol class="list pl0">
   <li class="pb2">
-    <%= link_to_unless_current("Branching and merging", "/about/branching-and-merging") %>
+    <%= link_to_unless_current("Branching and merging", "/about") %>
   </li>
   <li class="pv2">
     <%= link_to_unless_current("Small and fast", "/about/small-and-fast") %>
