--- a/app/views/about/data_assurance.html.erb
+++ b/app/views/about/data_assurance.html.erb
@@ -18,8 +18,8 @@
     <p>Most centralized version control systems provide no such integrity by default.</p>
 
     <div class="flex flex-row justify-between mt4">
-      <a href="#distributed" class="b">← Distributed</a>
-      <a href="#staging-area" class="b">Staging area →</a>
+      <a href="/about/distributed" class="b">← Distributed</a>
+      <a href="/about/staging-area" class="b">Staging area →</a>
     </div>
   </div>
 
