--- a/app/views/about/distributed.html.erb
+++ b/app/views/about/distributed.html.erb
@@ -53,8 +53,8 @@
     </p>
 
     <div class="flex flex-row justify-between mt4">
-      <a href="#small-and-fast" class="b">← Small and fast</a>
-      <a href="#info-assurance" class="b">Data Assurance →</a>
+      <a href=/about/small-and-fast" class="b">← Small and fast</a>
+      <a href="/about/info-assurance" class="b">Data Assurance →</a>
     </div>
   </div>
 
