--- a/app/views/about/free_and_open_source.html.erb
+++ b/app/views/about/free_and_open_source.html.erb
@@ -15,8 +15,8 @@
     </p>
 
     <div class="flex flex-row justify-between mt4">
-      <a href="#staging-area" class="b">← Staging area</a>
-      <a href="#trademark" class="b">Trademark →</a>
+      <a href="/about/staging-area" class="b">← Staging area</a>
+      <a href="/about/trademark" class="b">Trademark →</a>
     </div>
   </div>
 
