--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -3,13 +3,51 @@
 
 <div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
   <div class="w-100 w-75-l ph3 pl0-l pr5-l lh-copy">
-    <%= render partial: "branching_and_merging" %>
-    <%# render partial: "small_and_fast" %>
-    <%# render partial: "distributed" %>
-    <%# render partial: "data_assurance" %>
-    <%# render partial: "staging_area" %>
-    <%# render partial: "free_and_open_source" %>
-    <%# render partial: "trademark" %>
+
+    <h2 class="f3">Branching and merging</h2>
+
+    <p>
+    The Git feature that really makes it stand apart from nearly every other SCM out there is its branching model.
+    </p>
+
+    <p>
+    Git allows and encourages you to have multiple local branches that can be entirely independent of each other. The creation, merging, and deletion of those lines of development takes seconds.
+    </p>
+
+    <p>
+    This means that you can do things like:
+    </p>
+
+    <ul>
+      <li>
+        <strong>Frictionless context switching</strong>. Create a branch to try out an idea, commit a few times, switch back to where you branched from, apply a patch, switch back to where you are experimenting, and merge it in.
+      </li>
+      <li>
+        <strong>Role-based codelines</strong>. Have a branch that always contains only what goes to production, another that you merge work into for testing, and several smaller ones for day to day work.
+      </li>
+      <li>
+        <strong>Feature-based workflow</strong>. Create new branches for each new feature you're working on so you can seamlessly switch back and forth between them, then delete each branch when that feature gets merged into your main line.
+      </li>
+      <li>
+        <strong>Disposable experimentation</strong>. Create a branch to experiment in, realize it's not going to work, and just delete it - abandoning the work—with nobody else ever seeing it (even if you've pushed other branches in the meantime).
+      </li>
+    </ul>
+
+    <p class="center">
+    <img src="/images/about/branches@2x.png" width="500" height="288" alt="Branches">
+    </p>
+
+    <p>
+    Notably, when you push to a remote repository, you do not have to push all of your branches. You can choose to share just one of your branches, a few of them, or all of them. This tends to free people to try new ideas without worrying about having to plan how and when they are going to merge it in or share it with others.
+    </p>
+
+    <p>
+    There are ways to accomplish some of this with other systems, but the work involved is much more difficult and error-prone. Git makes this process incredibly easy and it changes the way most developers work when they learn it.
+    </p>
+
+    <div class="mt4">
+      <a href="/about/small-and-fast" class="b">Small and fast →</a>
+    </div>
   </div>
 
   <div class="w-25-l dn db-l">
