--- a/app/views/about/small_and_fast.html.erb
+++ b/app/views/about/small_and_fast.html.erb
@@ -203,8 +203,8 @@
     </p>
 
     <div class="flex flex-row justify-between mt4">
-      <a href="#branching-and-merging" class="b">← Branching and merging</a>
-      <a href="#distributed" class="b">Distributed →</a>
+      <a href="/about" class="b">← Branching and merging</a>
+      <a href="/about/distributed" class="b">Distributed →</a>
     </div>
   </div>
 
