--- a/app/views/about/staging_area.html.erb
+++ b/app/views/about/staging_area.html.erb
@@ -30,8 +30,8 @@
     </p>
 
     <div class="flex flex-row justify-between mt4">
-      <a href="#info-assurance" class="b">← Data assurance</a>
-      <a href="#free-and-open-source" class="b">Free and open source →</a>
+      <a href="/about/info-assurance" class="b">← Data assurance</a>
+      <a href="/about/free-and-open-source" class="b">Free and open source →</a>
     </div>
   </div>
 
