--- a/app/views/about/trademark.html.erb
+++ b/app/views/about/trademark.html.erb
@@ -128,7 +128,7 @@
     <a href="mailto:trademark@sfconservancy.org">TRADEMARK@SFCONSERVANCY.ORG</a> or by writing to Git Project c/o Software Freedom Conservancy, 137 Montague St. Ste 380, Brooklyn, NY 11201-3548.</p>
 
     <div class="mt4">
-      <a href="#free-and-open-source" class="b">← Free and open source</a>
+      <a href="/about/free-and-open-source" class="b">← Free and open source</a>
     </div>
   </div>
 
