Remove old fixed class usage

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -62,12 +62,12 @@
   <h2 class="f4">IRC channel</h2>
 
   <p>
-    If the manpages and this book aren’t enough and you need in-person help, you can try the <span class="highlight fixed">#git</span> channel on the Freenode IRC server (<strong>irc.freenode.net</strong>). These channels are regularly filled with hundreds of people who are all very knowledgeable about Git and are often willing to help.
-    The <span class="highlight fixed">#git-devel</span> channel welcomes Git development discussion, and might be able to help you contribute to Git.
+    If the manpages and this book aren’t enough and you need in-person help, you can try the <span class="b">#git</span> channel on the Freenode IRC server (<strong>irc.freenode.net</strong>). These channels are regularly filled with hundreds of people who are all very knowledgeable about Git and are often willing to help.
+    The <span class="b">#git-devel</span> channel welcomes Git development discussion, and might be able to help you contribute to Git.
   </p>
 
   <p>
-    If you need specific help about one of the for-profit Git hosting sites, you might try their own IRC channels (such as <span class="highlight fixed">#github</span> or <span class="highlight fixed">#gitlab</span>) on the same IRC server.
+    If you need specific help about one of the for-profit Git hosting sites, you might try their own IRC channels (such as <span class="b">#github</span> or <span class="b">#gitlab</span>) on the same IRC server.
   </p>
 
   <h2 class="f4">Contributing to Git</h2>
