Update manual page title

--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,5 +1,5 @@
 <% @section = "community" %>
-<% @page_title = "Git - Community" %>
+<% @page_title = "Git · Community" %>
 
 <div class="ph3 ph4-m ph0-l lh-copy dark-gray mw7 center">
   <h1 class="f3">Community</h1>
