--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -1,5 +1,5 @@
-<% @section = "documentation" %>
-<% @page_title = "Git - Documentation" %>
+<% @section = "manual" %>
+<% @page_title = "Manual · Git" %>
 
 <% content_for :sidebar do %>
 <% end %>
@@ -11,7 +11,7 @@
   <h2> Reference </h2>
 
   <div class="callout ref-manual">
-    <h3><%= link_to "Reference Manual", docs_path %></h3>
+    <h3><%= link_to "Reference Manual", manual_path %></h3>
 
     <p>
       The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
