More title updates

--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -1,5 +1,4 @@
-<% @section    = 'documentation' %>
-<% @subsection = 'book' %>
+<% @section = 'book' %>
 
 <% content_for :sidebar do %>
   <%= render 'translations' %>
