--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,5 @@
-<%- @section    = 'documentation' %>
-<%- @subsection = 'book' %>
-<%- @page_title = "Git - Book" %>
+<%- @section    = "book" %>
+<%- @page_title = "Book · Git" %>
 
 <% content_for :sidebar do %>
   <%= render 'translations' %>
