Mobile nav (partially) working

--- a/app/assets/stylesheets/src/search.scss
+++ b/app/assets/stylesheets/src/search.scss
@@ -1,3 +1,24 @@
+.page-overlay {
+  @extend .trans-o;
+}
+
+.is-modaling {
+  @extend .overflow-hidden;
+
+  .page-overlay {
+    @extend .filter-blur;
+    @extend .relative;
+    @extend .o-30;
+    @extend .trans-o;
+  }
+}
+
+.site-nav-links {
+  @extend .o-0;
+  z-index: -1;
+  @extend .trans-o;
+}
+
 .is-searching {
   @extend .bg-dark-tan;
 
@@ -20,13 +41,10 @@
 }
 
 .is-nav-open {
-  @extend .bg-dark-tan;
-
-  .site-nav {
-    @extend .db;
-  }
-
   .site-nav-links {
-    @extend .bg-dark-tan;
+    @extend .z-5;
+    @extend .o-100;
+    @extend .trans-o;
   }
 }
+
