--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -18,6 +18,16 @@
 .bg-near-white { background-color: #fcfcfa; }
 
 /*
+ * Filters
+ */
+.filter-blur { filter: blur(8px); }
+
+/*
+ * Transitions
+ */
+.trans-o { transition: opacity .15s ease-in-out; }
+
+/*
  * Hover / focus
  */
 .hover-orange:hover { color: #e05e0b; }
