--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
     <%= stylesheet_pack_tag "index" %>
   </head>
 
-  <body class="sans-serif bg-tan dark-gray mw9 center" id="<%= @section %>">
+  <body class="sans-serif bg-tan dark-gray mw9 center page-body js-page-body" id="<%= @section %>">
     <%= render partial: "shared/header" %>
-    <%= yield %>
-    <%= render partial: "shared/footer" %>
+    <div class="page-overlay">
+      <%= yield %>
+      <%= render partial: "shared/footer" %>
+    </div>
   </body>
 </html>
