--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,35 +5,35 @@
   <div id="search-results"></div>
 -->
 
-<header class="flex flex-column flex-row-l pv3 pv3-l ph3 ph4-m ph5-l mb3-l w-100 bb bb-0-l b--moon-gray js-site-header">
+<header class="flex flex-column flex-row-l pv3 pv3-l ph3 ph4-m ph5-l mb3-l w-100 bb bb-0-l b--moon-gray site-header js-site-header">
   <div class="flex flex-row justify-between items-center w-100">
     <div class="site-logo tc tl-l tl-m pr3-l order-1 order-0-l w4 z-1">
       <a href="/"><img src="/images/git-logo-full.svg" class="w-70 w-100-l" alt="Git"></a>
     </div>
-    <nav class="site-nav f5 fw5 flex-auto-l nowrap order-0 order-1-l pr4-m pr5-l z-0">
+    <nav class="site-nav f4 f5-l fw5 flex-auto-l nowrap order-0 order-1-l pr4-m pr5-l">
       <a href="#" class="near-black order-2 dn-l js-nav-link">
         <!-- Menu icon -->
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
       </a>
 
-      <ul class="site-nav-links list w-100 w-auto-l pl0 dn db-l tl tr-l absolute relative-l left-0 top-2 top-0-l ph3 ph4-m ph0-l pv3 pv0-l bb bb-0-l b--moon-gray js-site-nav">
+      <ul class="site-nav-links list w-100 w-auto-l pl0 dn_ db-l_ tl tr-l absolute relative-l left-0 top-2 top-0-l bottom-0 ph3 ph4-m ph0-l pv3 pv0-l js-site-nav">
         <li class="db dib-l">
-          <a href="/about" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "about" %>">About</a>
+          <a href="/about" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "about" %>">About</a>
         </li>
         <li class="db dib-l">
-          <a href="/manual" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "manual" %>">Manual</a>
+          <a href="/manual" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "manual" %>">Manual</a>
         </li>
         <li class="db dib-l">
-          <a href="/book" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "book" %>">Book</a>
+          <a href="/book" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "book" %>">Book</a>
         </li>
         <li class="db dib-l">
-          <a href="/downloads" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "download" %>">Download</a>
+          <a href="/downloads" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "download" %>">Download</a>
         </li>
         <li class="db dib-l">
-          <a href="/resources" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "resources" %>">Resources</a>
+          <a href="/resources" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "resources" %>">Resources</a>
         </li>
         <li class="db dib-l">
-          <a href="/community" class="no-underline near-black hover-blue pv2 ph2-l <%= "bb b--orange bw1" if @section == "community" %>">Community</a>
+          <a href="/community" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "community" %>">Community</a>
         </li>
       </ul>
     </nav>
@@ -46,7 +46,7 @@
     </a>
     <div class="search-box pv-0 order-3 dn db-l w-80 w-25-l absolute relative-l">
       <form action="#">
-        <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…">
+        <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba focus-bg-white b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…">
       </form>
     </div>
   </div>
