Mobile nav working better

--- a/app/assets/stylesheets/src/search.scss
+++ b/app/assets/stylesheets/src/search.scss
@@ -15,8 +15,10 @@
 
 .site-nav-links {
   @extend .o-0;
-  z-index: -1;
+  @extend .o-100-l;
   @extend .trans-o;
+  @extend .z--1;
+  @extend .z-1-l;
 }
 
 .is-searching {
