--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -90,6 +90,50 @@ code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace;
 .nl-1px { margin-left: -1px;}
 
 /*
+ * Opacity
+ */
+@media screen and (min-width: 30em) {
+  .o-100-ns {
+    opacity: 100;
+  }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .o-100-m {
+    opacity: 100;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .o-100-l {
+    opacity: 100;
+  }
+}
+
+/*
+ * Z-indexes
+ */
+.z--1 { z-index: -1; }
+
+@media screen and (min-width: 30em) {
+  .z-1-ns {
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .z-1-m {
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .z-1-l {
+    z-index: 1;
+  }
+}
+
+/*
  * Details / summary toggle
  */
 .no-details-marker::-webkit-details-marker {
