--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,22 +18,22 @@
 
       <ul class="site-nav-links list w-100 w-auto-l pl0 dn_ db-l_ tl tr-l absolute relative-l left-0 top-2 top-0-l bottom-0 ph3 ph4-m ph0-l pv3 pv0-l js-site-nav">
         <li class="db dib-l">
-          <a href="/about" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "about" %>">About</a>
+          <a href="/about" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "about" %>">About</a>
         </li>
         <li class="db dib-l">
-          <a href="/manual" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "manual" %>">Manual</a>
+          <a href="/manual" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "manual" %>">Manual</a>
         </li>
         <li class="db dib-l">
           <a href="/book" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "book" %>">Book</a>
         </li>
         <li class="db dib-l">
-          <a href="/downloads" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "download" %>">Download</a>
+          <a href="/downloads" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "download" %>">Download</a>
         </li>
         <li class="db dib-l">
-          <a href="/resources" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "resources" %>">Resources</a>
+          <a href="/resources" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "resources" %>">Resources</a>
         </li>
         <li class="db dib-l">
-          <a href="/community" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2-l <%= "bb b--orange bw1" if @section == "community" %>">Community</a>
+          <a href="/community" class="no-underline near-black hover-blue db di-l pv3 pv2-l ph2 <%= "bl bl-0-l bb-l b--orange bw2 bw1-l" if @section == "community" %>">Community</a>
         </li>
       </ul>
     </nav>
