Convert burger to button

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,10 +11,10 @@
       <a href="/"><img src="/images/git-logo-full.svg" class="w-70 w-100-l" alt="Git"></a>
     </div>
     <nav class="site-nav f4 f5-l fw5 flex-auto-l nowrap order-0 order-1-l pr4-m pr5-l">
-      <a href="#" class="near-black order-2 dn-l js-nav-link">
+      <button type="button" class="bg-transparent pa0 bw0 pointer button-reset near-black order-2 dn-l js-nav-link">
         <!-- Menu icon -->
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-      </a>
+      </button>
 
       <ul class="site-nav-links list w-100 w-auto-l pl0 dn_ db-l_ tl tr-l absolute relative-l left-0 top-2 top-0-l bottom-0 ph3 ph4-m ph0-l pv3 pv0-l js-site-nav">
         <li class="db dib-l">
