Fix mid-width content margins

--- a/app/views/about/trademark.html.erb
+++ b/app/views/about/trademark.html.erb
@@ -1,8 +1,8 @@
 <%- @section = "about" %>
 <%- @page_title = "About · Trademark · Git" %>
 
-<div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
-  <div class="w-100 w-75-l ph3 pl0-l pr5-l lh-copy">
+<div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
+  <div class="w-100 w-75-l pl0-l pr5-l lh-copy">
     <h2 class="f3">GIT TRADEMARK POLICY</h2>
 
     <h3 class="f4">1 Purpose</h3>
