--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,8 +1,8 @@
 <% @section = "manual" %>
 
 <% cache @doc do %>
-  <div class="flex flex-column flex-row-l ph0 ph4-m ph5-l">
-    <div class="order-1 order-0-l w-100 w-75-l ph3 pl0-l pr5-l">
+  <div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
+    <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l">
       <div class="flex justify-between">
         <div class="w-100">
           <%= render 'doc/versions' %>
@@ -12,8 +12,8 @@
     </div>
 
     <!-- Sidebar links -->
-    <div class="order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
-      <a href="#" class="bg-dark-tan link blue b pv3 ph3 db dn-l f5">
+    <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
+      <a href="#" class="bg-dark-tan link blue b pv3 ph4 db dn-l f5">
         Manual topics
       </a>
       <div class="bg-dark-tan dn db-l pv0 pv3-l ph3 ph4-l br2 max-vh-50 max-vh-none-l overflow-scroll">
