Add border to nested dlists. Fixes #701

--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -17,6 +17,8 @@
 .bg-blue { background-color: #357edd; }
 .bg-near-white { background-color: #fcfcfa; }
 
+.b--dark-tan { border-color: #edede9; }
+
 /*
  * Filters
  */
