Style anchor permalinks

--- a/app/assets/stylesheets/src/docs.scss
+++ b/app/assets/stylesheets/src/docs.scss
@@ -16,11 +16,32 @@ code {
 }
 
 .sect1 {
+  .anchor {
+    @extend .absolute;
+    @extend .fw3;
+    @extend .o-0;
+    @extend .trans-o;
+    @extend .nl3;
+    @extend .pr1;
+
+    &::before {
+      content: '#';
+    }
+  }
+
   h2 {
     @extend .f4;
     @extend .orange;
     @extend .fw5;
     @extend .lh-copy;
+    @extend .relative;
+
+    &:hover {
+      .anchor {
+        @extend .o-100;
+      }
+
+    }
   }
 
   p {
