--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <a href="/"><img src="/images/logo@2x.png" width="110" height="46" alt="Git" /></a>
   <span id="tagline"></span>
   <script type="text/javascript">
-    var taglines = <%= raw JSON.generate(TAGLINES) %>;
+    var taglines = <%= raw JSON.generate(Gitscm::TAGLINES) %>;
     var tagline = taglines[Math.floor(Math.random() * taglines.length)];
     document.getElementById('tagline').innerHTML = '--' + tagline;
   </script>
