test review apps

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -6,7 +6,7 @@
           <%= link_to about_path do %>
             <img src="/images/icons/nav-about@2x.png" width="74" height="74" />
             <h3>About</h3>
-            <p>The advantages of Git compared to other source control systems.</p>
+            <p>The advantages of Git compared to other source control systems. TEST</p>
           <% end %>
         </li>
         <li id="nav-documentation">
