Restyle about page

--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -32,7 +32,7 @@
          src="https://www.paypal.com/en_US/i/scr/pixel.gif">
   </form>
 
-  <h3 class="f4">Check</h3>
+  <h3 class="f5">Check</h3>
 
   <p>We can also accept donations drawn in USD from banks in the USA
   (donations from banks outside of the US or not in USD should be handled
@@ -46,16 +46,17 @@
     BROOKLYN, NY 11201 USA
   </p>
 
-  <h3 class="title">Wire</h3>
+  <h3 class="f5">Wire</h3>
+
   <p>Conservancy can accept wire donations, but the instructions vary
   depending on the country of origin. Please contact <a
     href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
   for instructions.
 
-  <h3 class="title">Stock</h3>
+  <h3 class="f5">Stock</h3>
+
   <p>Conservancy also accepts stock donations on behalf of the Git
   project. If you would like to donate stock, please contact <a
     href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
   for instructions on how to initiate the transfer.
-
 </div>
