--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -1,41 +1,45 @@
-<div id="main">
-  <h1>About git-scm.com</h1>
+<% @page_title = "Git and Software Freedom Conservancy · Git" %>
 
-  This site is open source and maintained by members of the Git
-  community.  We welcome patches, suggestions, and corrections.
+<div class="ph3 ph4-m ph0-l lh-copy dark-gray mw7 center">
+  <h1 class="f3">About this site</h1>
 
-  <h2>Open Source</h2>
+  <p>This site is open source and maintained by members of the Git
+  community.  We welcome patches, suggestions, and corrections.</p>
 
-  The content on this site is pulled from multiple sources. It is
+  <h2 class="f4">Open Source</h2>
+
+  <p>The content on this site is pulled from multiple sources. It is
   available under various licenses, and bugs reports should be directed
-  to the appropriate repositories:
+  to the appropriate repositories:</p>
 
   <ul>
-
     <li>Most of the "base" site content is hosted in the
-    <a href="https://github.com/git/git-scm.com">git/git-scm.com</a>
-    repository at GitHub. That includes all pages except the book and
-    manpages, along with the general design of the site. This content
-    is available under the
-    <a href="https://github.com/git/git-scm.com/blob/master/MIT-LICENSE.txt">MIT license</a>.
-    Bug reports and suggestions may be made in that repository.
+      <a href="https://github.com/git/git-scm.com">git/git-scm.com</a>
+      repository at GitHub. That includes all pages except the book and
+      manpages, along with the general design of the site. This content
+      is available under the
+      <a href="https://github.com/git/git-scm.com/blob/master/MIT-LICENSE.txt">MIT license</a>.
+      Bug reports and suggestions may be made in that repository.
+    </li>
 
     <li>Content from the ProGit book is imported from the
-    <a href="https://github.com/progit/progit2">progit/progit2</a>
-    repository, which is available under a Creative Commons
-    <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC-BY-NC-SA</a>
-    license, <a href="https://github.com/progit/progit2/blob/master/LICENSE.asc">
-    as specified in the progit2 repository</a>.
-    Bug reports and suggestions may be made in the progit2 repository.
+      <a href="https://github.com/progit/progit2">progit/progit2</a>
+      repository, which is available under a Creative Commons
+      <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC-BY-NC-SA</a>
+      license, <a href="https://github.com/progit/progit2/blob/master/LICENSE.asc">
+        as specified in the progit2 repository</a>.
+      Bug reports and suggestions may be made in the progit2 repository.
+    </li>
 
     <li>The reference manual is imported from the Git project, and is
-    available under the <a href="https://github.com/git/git/blob/master/COPYING">GPL</a>.
-    Bug reports and suggestions should be made to the upstream
-    <a href="/community">Git community</a>.
+      available under the <a href="https://github.com/git/git/blob/master/COPYING">GPL</a>.
+      Bug reports and suggestions should be made to the upstream
+      <a href="/community">Git community</a>.
+    </li>
 
     <li>Bugs in the Git software itself should similarly go to the
-    <a href="/community">Git community</a>.
-
+      <a href="/community">Git community</a>.
+    </li>
   </ul>
 
   <h2>Authors</h2>
@@ -47,24 +51,24 @@
   The site is currently collaboratively maintained in the
   <a href="https://github.com/git/git-scm.com">git-scm.com</a>
   repository at GitHub.
+  </p>
 
   <p>Credit also goes to the many contributors, bug reporters, and
   maintainers over the years, both in this repository and in others from
   which we pull content. See the individual repository histories for a
-  complete list.
+  complete list.</p>
 
   <h2>Sponsors</h2>
 
-  We are grateful to the companies which have donated resources and
-  services to keep the site running, including:
+  <p>We are grateful to the companies which have donated resources and
+  services to keep the site running, including:</p>
 
   <ul>
-    <li><a href="https://heroku.com">Heroku</a>
-    <li><a href="https://cloudflare.com">Cloudflare</a>
-    <li><a href="https://bonsai.io/">Bonsai</a>
+    <li><a href="https://heroku.com">Heroku</a></li>
+    <li><a href="https://cloudflare.com">Cloudflare</a></li>
+    <li><a href="https://bonsai.io/">Bonsai</a></li>
   </ul>
 
-  For a detailed view of the site's network layout, see our
-  <a href="https://github.com/git/git-scm.com/blob/master/ARCHITECTURE.md">architecture document</a>.
-
+  <p>For a detailed view of the site's network layout, see our
+  <a href="https://github.com/git/git-scm.com/blob/master/ARCHITECTURE.md">architecture document</a>.</p>
 </div>
