Fix header sizing

--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -42,7 +42,7 @@
     </li>
   </ul>
 
-  <h2>Authors</h2>
+  <h2 class="f4">Authors</h2>
 
   <p>This site was originally conceived and written by
   <a href="https://github.com/schacon">Scott Chacon</a>.
@@ -58,7 +58,7 @@
   which we pull content. See the individual repository histories for a
   complete list.</p>
 
-  <h2>Sponsors</h2>
+  <h2 class="f4">Sponsors</h2>
 
   <p>We are grateful to the companies which have donated resources and
   services to keep the site running, including:</p>
