Move javascript assets to use a more conventional config

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,8 +8,4 @@
   </div>
 </footer>
 
-<%= javascript_include_tag "jquery-1.7.1.min.js",
-                           "jquery-ui-1.8.18.custom.min.js",
-                           "jquery.defaultvalue.js",
-                           "session.min.js",
-                           "site.js" %>
+<%= javascript_include_tag "application" %>
