--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
   <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
 
-  <%= stylesheet_link_tag "git-scm.css" %>
+  <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "modernize" %>
   <!--[if (gte IE 6)&(lte IE 8)]>
   <%= javascript_include_tag "/javascripts/selectivizr-min.js" %>
